10-40% speed boost when running lua scripts.

Version 37.1 10/14/17
Fix mac version. Large code refactoring (air sim / simulation).

Version 37.2 10/14/17
Fix custom HUDs resetting to default on startup. .tmp and .tmp2 show in debug 
HUD by default. Fix color mode resetting on startup.

Version 37.2 (build 89) 10/18/17
Really fix the mac version.

Version 38.0 12/23/17
Fix SPNG description error. Fix elem.PROP_LIFE_KILL_DEC being missing. Massive 
rewrite of save building / loading / transforming entirely into C++. Move to 
C++11. Stamps now automatically expand when shifted out of bounds. Walls and 
other grids now shift when stamps are shifted far enough. Screenshots now 
saved as .png files. Add tpt.record and make tpt.screenshot work like tpt++.
Display tooltips in element search UI. Allow scale modes higher than 2 (set 
via console or powder.pref editing).

Version 38.1 12/23/17
Attempt to fix "out of memory" error when creating saves. I don't actually know 
what caused it or how I fixed it. Fix stamps not loading in the right position. 
Fix stamps being allowed out of bounds. Fix ctrl+r redoing instead of 
reloading. Fix ctrl+s not creating a reload point. Fix reload button being 
disabled when loading local saves. Fix !bubble crash. Cap recents menu to 20 
elements. Ctrl+p shortcut to open PROP tool.

Version 38.2 2018-01-02
Fix ren.colorMode() crash. Fix crash when opening saves from the command line. 
Improve bson error handling. Fix "Unable to decompress (ret 0)" error when 
attempting to load certain saves.

Version 39.0 2018-03-04
Fix "dns mismatch" error when starting game without internet. Sort local saves 
alphabetically. ctrl+shift+p shortcut for putting PROP on right click. Add 
cyclone tool from version 93.0. Large rewrite of some simulation code to 
support doubling the element limit. Disabled until 93.0 comes out due to 
incompatible save format changes. Add a warning message when stealing saves.