@@ -874,4 +874,6 @@ Fix "dns mismatch" error when starting game without internet. Sort local saves
 alphabetically. ctrl+shift+p shortcut for putting PROP on right click. Add 
 cyclone tool from version 93.0. Large rewrite of some simulation code to 
 support doubling the element limit. Disabled until 93.0 comes out due to 
-incompatible save format changes. Add a warning message when stealing saves.
+incompatible save format changes. Add a warning message when stealing saves. 
+When finding particles, show how many were found in HUD. Ignore 503 errors 
+from update server.
